# Aethelburg-project

./: .gitignore  Aethelburg project.htm  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.ps1  todo.txt
Aethelburg project_files/: editdata.mso
config/: __init__.py  database.py  settings.py
docker/: init-db.sql
docs/: ARCHITECTURE.md  DATA_SOURCES.md  DESIGN_INTELLIGENCE.md  FAQ.md  LEGAL.md  ONTOLOGY.md  SETUP.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: setup_db.sh
